# circ

./: Cargo.toml  Makefile  README.md
client/: circ.rs
lib/: circ_comms.rs
server/: circd.rs  connection.rs  irc.rs  irc_channel.rs  irc_message.rs
