[package]

name = "circ" # the name of the package
version = "0.0.1"    # the current version, obeying semver
authors = [ "tcstewart@users.noreply.github.com" ]

[dependencies]
time = "*"

[dependencies.irc]
version = "*"
features = ["ssl"]


[lib]
name = "circ_comms"
path = "lib/circ_comms.rs"
crate_type = ["rlib"]

[[bin]]
name = "circ"
path = "client/circ.rs"

[[bin]]
name = "circd"
path = "server/circd.rs"
